packages/gatsby-theme-carbon/src/components/ImageGallery/ImageGalleryImage.module.scss
.image-button-wrapper {
  border: 0;
  background: none;
  padding: 0;
  outline: none;
  width: 100%;
}

.image-button-wrapper::-moz-focus-inner {
  border: 0;
}

.image-button-wrapper:focus {
  outline: none;
}

.image-title {
  @include carbon--type-style('productive-heading-02');
  position: absolute;
  display: block;
  width: 100%;
  align-self: flex-start;
  left: $spacing-07;
  color: $text-04;
  margin-top: $spacing-09;
  margin-left: $spacing-03;
  user-select: none;
}

.image-in-dialog {
  display: flex;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  user-select: none;
}

.image-in-dialog :global(.gatsby-resp-image-wrapper) {
  width: 100%;
}

.image-in-dialog img {
  margin: $spacing-05 0;
}

.image-button-wrapper:focus img {
  outline: 2px solid $focus;
  outline-offset: -2px;
}

